--- a/QKSMS/src/main/AndroidManifest.xml
+++ b/QKSMS/src/main/AndroidManifest.xml
@@ -88,6 +88,7 @@
                 <data android:scheme="sms_body" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.whitelist.WhitelistActivity" />
 
         <activity-alias
             android:name=".ui.MainActivity-Teal"
